@@ -3,11 +3,12 @@ package io.attestry.userauth.application.identity;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import io.attestry.userauth.application.auth.query.UserAccountQueryService;
 import io.attestry.userauth.application.port.identity.UserAccountRepositoryPort;
-import io.attestry.userauth.domain.identity.model.Email;
-import io.attestry.userauth.domain.identity.model.UserAccount;
-import io.attestry.userauth.domain.identity.model.UserStatus;
-import io.attestry.userauth.domain.identity.model.VerificationLevel;
+import io.attestry.userauth.domain.auth.model.Email;
+import io.attestry.userauth.domain.auth.model.UserAccount;
+import io.attestry.userauth.domain.auth.model.UserStatus;
+import io.attestry.userauth.domain.auth.model.VerificationLevel;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
@@ -17,7 +18,7 @@ import org.junit.jupiter.api.Test;
 class UserAccountQueryServiceTest {
 
     @Test
-    void getEmailsByUserIds_returnsDistinctEmailMap() {
+    void getEmailMapByUserIds_returnsDistinctEmailMap() {
         UserAccount first = UserAccount.reconstitute(
             "user-1",
             Email.of("first@example.com"),
@@ -38,7 +39,7 @@ class UserAccountQueryServiceTest {
             new StubUserAccountRepositoryPort(List.of(first, second))
         );
 
-        Map<String, String> result = userAccountQueryService.getEmailsByUserIds(List.of("user-1", "user-2", "user-1"));
+        Map<String, String> result = userAccountQueryService.getEmailMapByUserIds(List.of("user-1", "user-2", "user-1"));
 
         assertEquals(2, result.size());
         assertEquals("first@example.com", result.get("user-1"));
@@ -46,13 +47,13 @@ class UserAccountQueryServiceTest {
     }
 
     @Test
-    void getEmailsByUserIds_returnsEmptyMap_whenIdsBlankOrNull() {
+    void getEmailMapByUserIds_returnsEmptyMap_whenIdsBlankOrNull() {
         UserAccountQueryService userAccountQueryService = new UserAccountQueryService(
             new StubUserAccountRepositoryPort(List.of())
         );
 
-        assertTrue(userAccountQueryService.getEmailsByUserIds(List.of()).isEmpty());
-        assertTrue(userAccountQueryService.getEmailsByUserIds(Arrays.asList((String) null)).isEmpty());
+        assertTrue(userAccountQueryService.getEmailMapByUserIds(List.of()).isEmpty());
+        assertTrue(userAccountQueryService.getEmailMapByUserIds(Arrays.asList((String) null)).isEmpty());
     }
 
     private static final class StubUserAccountRepositoryPort implements UserAccountRepositoryPort {
